# gdsyncer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
godot/: GDSyncer.gdextension  project.godot
godot/addons/GDSyncer/: gdsyncer.gd  plugin.cfg  temp.gds
godot/addons/GDSyncer/scenes/: Server.tscn  main_panel.tscn  main_panel_windowed.tscn
godot/addons/GDSyncer/scripts/: main_panel.gd
rust/: Cargo.toml  build.rs
rust/proto/: syncer.proto
rust/src/: lib.rs
rust/src/client/: mod.rs
rust/src/general/: mod.rs
rust/src/server/: mod.rs
